testdata/baselines/reference/submodule/compiler/jsxChildrenWrongType.errors.txt
other.tsx(11,9): error TS2769: No overload matches this call.
  Overload 2 of 2, 'new (props: PropsType, context: any): Foo', gave the following error.
    Type 'unknown' is not assignable to type 'string | boolean'.
    Type 'string' is not assignable to type 'number | boolean'.


==== other.tsx (1 errors) ====
    /// <reference path="/.lib/react18/react18.d.ts" />
    /// <reference path="/.lib/react18/global.d.ts" />
    
    
    interface PropsType {
        children: [string, number?] | Iterable<boolean>;
    }
    declare class Foo extends React.Component<PropsType, {}> {}
    const b = (
        <Foo>
            {<div/> as unknown}
            ~~~~~~~~~~~~~~~~~~~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   Overload 2 of 2, 'new (props: PropsType, context: any): Foo', gave the following error.
!!! error TS2769:     Type 'unknown' is not assignable to type 'string | boolean'.
!!! error TS2769:     Type 'string' is not assignable to type 'number | boolean'.
            {"aa"}
        </Foo>
    );